debug - .entity will add prompt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=springai
 
+logging.level.org.springframework.ai.chat.client.advisor=DEBUG
+
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.base-url=https://api.groq.com/openai
 spring.ai.openai.chat.options.model=llama3-70b-8192
